Fix content overflow problem

--- a/css/mainstyles.css
+++ b/css/mainstyles.css
@@ -21,8 +21,7 @@ img{
     background-attachment: fixed;
     background-position: center center;
     position: relative;
-    height: 100%;
-    
+    min-height: 1200px;
 }
 .bgimg-1 {
     background-image: url("https://binh1298.github.io/resources/images/home-head.jpg");
